added lxml packages to ebextensions

--- a/.ebextensions/01_packages.config
+++ b/.ebextensions/01_packages.config
@@ -3,4 +3,8 @@ packages:
     git: []
     postgresql93-devel: []
     libjpeg-turbo-devel: []
+    libxml2: []
+    libxml2-devel: []
+    libxslt: []
+    libxslt-devel: []
 
