--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -10,7 +10,7 @@ container_commands:
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "config/settings/production"
+    DJANGO_SETTINGS_MODULE: "config.settings.production"
     "PYTHONPATH": "/opt/python/current/app/imagetrac_docker:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: config/settings/wsgi.py
