--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -13,7 +13,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "config.settings.production"
     "PYTHONPATH": "/opt/python/current/app/imagetrac_docker:$PYTHONPATH"
   "aws:elasticbeanstalk:container:python":
-    WSGIPath: config/settings/wsgi.py
+    WSGIPath: config/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
