set database_url

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@
 POSTGRES_PASSWORD='postgrespass'
 POSTGRES_USER='postgres'
 
+DATABASE_URL='postgres:///imagetrac_docker'
+
 # General settings
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
