--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -10,11 +10,13 @@ container_commands:
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "config.settings.production"
+    DJANGO_SETTINGS_MODULE: "iotd.settings"
     "PYTHONPATH": "/opt/python/current/app/imagetrac_docker:$PYTHONPATH"
+    "ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
     WSGIPath: config/wsgi.py
     NumProcesses: 3
     NumThreads: 20
   "aws:elasticbeanstalk:container:python:staticfiles":
     "/static/": "www/static/"
+
