--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -10,7 +10,7 @@ container_commands:
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
-    DJANGO_SETTINGS_MODULE: "iotd.settings"
+    DJANGO_SETTINGS_MODULE: "config.settings.production"
     "PYTHONPATH": "/opt/python/current/app/imagetrac_docker:$PYTHONPATH"
     "ALLOWED_HOSTS": ".elasticbeanstalk.com"
   "aws:elasticbeanstalk:container:python":
