--- a/requirements.txt
+++ b/requirements.txt
@@ -1,118 +1,113 @@
-# Wheel 0.25+ needed to install certain packages on CPython 3.5+
-# like Pillow and psycopg2
-# See http://bitly.com/wheel-building-fails-CPython-35
-# Verified bug on Python 3.5.1
-wheel==0.29.0
-
-# Bleeding edge Django
-django==1.10.5
-
-# Configuration
-django-environ==0.4.1
-whitenoise==3.2.3
-
-
-# Forms
-django-braces==1.10.0
-django-crispy-forms==1.6.1
-
-# Models
-django-model-utils==2.6.1
-
-# Images
-Pillow==4.0.0
-
-# For user registration, either via email or social
-# Well-built with regular release cycles!
-django-allauth==0.30.0
-
-
-# Python-PostgreSQL Database Adapter
-psycopg2==2.6.2
-
-# Unicode slugification
+alabaster==0.7.9
+amqp==2.1.4
+anyjson==0.3.3
+appdirs==1.4.0
+appnope==0.1.0
 awesome-slugify==1.6.5
-
-# Time zones support
-pytz==2016.10
-
-# Redis support
-django-redis==4.7.0
-redis>=2.10.5
-
-
-
-coverage==4.3.1
-django-coverage-plugin==1.3.1
-Sphinx==1.5.1
-django-extensions==1.7.5
-Werkzeug==0.11.15
-django-test-plus==1.0.16
-factory-boy==2.8.1
-
-django-debug-toolbar==1.6
-
-# improved REPL
-ipdb==0.10.1
-
-pytest-django==3.1.2
-pytest-sugar==0.8.0
-
-
-# Pro-tip: Try not to put anything here. Avoid dependencies in
-#	production that aren't in development.
-
-
-
-
-# WSGI Handler
-# ------------------------------------------------
-gevent==1.2.1
-gunicorn==19.6.0
-
-# Static and Media Storage
-# ------------------------------------------------
+awsebcli==3.9.0
+Babel==2.3.4
+billiard==3.5.0.2
+blessed==1.9.5
 boto==2.45.0
-django-storages-redux==1.3.2
-
-
-# Email backends for Mailgun, Postmark, SendGrid and more
-# -------------------------------------------------------
+botocore==1.5.7
+cement==2.8.2
+colorama==0.3.7
+contextlib2==0.5.4
+coverage==4.3.1
+decorator==4.0.11
+defusedxml==0.4.1
+Django==1.10.5
+django-allauth==0.30.0
 django-anymail==0.7
-
-# Raven is the Sentry client
-# --------------------------
-raven==5.32.0
-
-
-
-flake8==3.2.1 # pyup: != 2.6.0
-
-
-amqp>=1.4.9
-anyjson>=0.3.3
-billiard>=3.3.0.23
-colorama>=0.3.7
+django-braces==1.10.0
+django-coverage-plugin==1.3.1
+django-crispy-forms==1.6.1
+django-debug-toolbar==1.6
+django-environ==0.4.1
 django-excel==0.0.4
-django-filter>=0.13.0
+django-extensions==1.7.5
+django-filter==1.0.1
+django-model-utils==2.6.1
 django-multiupload==0.5.1
 django-password-reset==0.9
-django-suit>=0.2.19
-djangorestframework>=3.4.7
-et-xmlfile>=1.0.1
-ezodf>=0.3.2
-future>=0.15.2
-jdcal>=1.3
-kombu>=3.0.35
-lxml>=3.6.4
-odfpy>=0.9.6
-openpyxl>=2.4.0
-pyexcel>=0.2.5
-pyexcel-io>=0.2.3
-pyexcel-ods>=0.2.0
-pyexcel-ods3>=0.2.1
-pyexcel-webio>=0.0.7
-pyexcel-xlsx>=0.2.2
+django-redis==4.7.0
+django-storages-redux==1.3.2
+django-suit==0.2.24
+django-test-plus==1.0.16
+djangorestframework==3.5.3
+docker-py==1.7.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.13.1
+et-xmlfile==1.0.1
+ezodf==0.3.2
+factory-boy==2.8.1
+Faker==0.7.7
+flake8==3.2.1
+future==0.16.0
+gevent==1.2.1
+greenlet==0.4.11
+gunicorn==19.6.0
+imagesize==0.7.1
+ipdb==0.10.1
+ipython==5.2.0
+ipython-genutils==0.1.0
+jdcal==1.3
+Jinja2==2.9.5
+jmespath==0.9.1
+kombu==4.0.2
+lxml==3.7.2
+MarkupSafe==0.23
+mccabe==0.5.3
+oauthlib==2.0.1
+odfpy==1.3.4
+olefile==0.44
+openpyxl==2.4.2
+packaging==16.8
+pathspec==0.5.0
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==4.0.0
+prompt-toolkit==1.0.10
+psycopg2==2.6.2
+ptyprocess==0.5.1
+py==1.4.32
+pycodestyle==2.2.0
+pyexcel==0.4.3
+pyexcel-io==0.3.2
+pyexcel-ods==0.3.0
+pyexcel-ods3==0.3.0
+pyexcel-webio==0.0.10
+pyexcel-xlsx==0.3.0
+pyflakes==1.3.0
+Pygments==2.2.0
+pyparsing==2.1.10
+pytest==3.0.6
+pytest-django==3.1.2
+pytest-sugar==0.8.0
+python-dateutil==2.6.0
+python3-openid==3.0.10
+pytz==2016.10
+PyYAML==3.12
+raven==5.32.0
+redis==2.10.5
+regex==2017.1.17
+requests==2.9.1
+requests-oauthlib==0.7.0
+semantic-version==2.5.0
+simplegeneric==0.8.1
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.5.1
+sqlparse==0.2.2
+tabulate==0.7.5
+termcolor==1.1.0
 texttable==0.8.4
+traitlets==4.3.1
+Unidecode==0.4.20
 vine==1.1.1
-xlrd>=1.0.0
+wcwidth==0.1.7
+websocket-client==0.40.0
+Werkzeug==0.11.15
+whitenoise==3.2.3
+xlrd==1.0.0
