--- a/config/settings/.env
+++ b/config/settings/.env
@@ -9,7 +9,7 @@ DATABASE_URL='postgres:///imagetrac_docker'
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY='^5hd=0&w4dtxc3h=bi+di5uh#!k#h@31szp0(g6ipmw6n+voz1'
-DJANGO_ALLOWED_HOSTS='54.153.52.154', '.imagetrac.tech'
+DJANGO_ALLOWED_HOSTS='54.153.52.154', '.elasticbeanstalk.com', '.imagetrac.tech', 'localhost'
 
 # AWS Settings
 DJANGO_AWS_ACCESS_KEY_ID='AKIAIMRBMSD72W5ZN5KQ'
